--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-fileupload": "^1.2.1",
     "express-handlebars": "^5.3.4",
     "express-session": "^1.17.2",
+    "fs-extra": "^10.0.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.0.12",
     "morgan": "^1.10.0",
