--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Proyecto Node WEBII",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "node src/server.js",
     "dev": "nodemon src/index.js"
   },
   "author": "",
